20-httpbin2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin2
  namespace: demo
  labels:
    app: httpbin
    instance: httpbin2
    demo: httpbin2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      instance: httpbin2
  template:
    metadata:
      labels:
        app: httpbin
        instance: httpbin2
        demo: httpbin2
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /status/200
              port: 80
          livenessProbe:
            httpGet:
              path: /status/200
              port: 80
