11-httpbin1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin1
  namespace: demo
spec:
  selector:
    app: httpbin
    instance: httpbin1
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
