21-httpbin2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin2
  namespace: demo
spec:
  selector:
    app: httpbin
    instance: httpbin2
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
